--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.4.2",
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
     "prisma": "^5.4.2",
