--- a/package.json
+++ b/package.json
@@ -4,18 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon src/app.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.4.2",
-    "bcryptjs": "^2.4.3",
-    "express": "^4.18.2",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.5",
+    "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.0.1",
-    "prisma": "^5.4.2",
     "yup": "^1.3.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.9.0",
+    "express": "^4.18.2",
+    "nodemon": "^3.0.1",
+    "prisma": "^5.5.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.2.2"
   }
 }
